# cityjson

./: .gitignore
docs/: extensions.rst
extensionValidator/: validateExtension.py
extensions/: noiseade2.json
hierarchy-tests/: CMakeLists.txt  main.cpp
road-datafiles/: N640 CityJSON linking types.py  N640 CityJSON writer.py  N640_LoD0.1.json  N640_LoD1.json  N640_LoD1_linked.json  N640_LoD2.json  N640_LoD3.json  N640_Lod0.2.json  N640_Lod0.3.json
schema/v07/: noiseexample2.json
schema/v09/: cityjson.schema.json  cityobjects.schema.json
schema/v09/extensions/: roadnetwork.json
